[chore]: 更新项目依赖与代码结构优化
- **依赖管理**
  - 新增Dependabot配置实现自动依赖更新
  - 升级Qt版本至6.8.2并更新相关构建配置
  - 更新vcpkg基线到3de032f，确保依赖兼容性
  - 优化GitHub Actions缓存策略，精确匹配运行环境

- **核心功能改进**
  - 重构图片缩略图模块，抽离Thumbnail类到独立头文件
  - 统一各视图组件(Viewer)的缩略图处理逻辑
  - 增强日志系统，新增日志文件分块和自动清理功能

- **代码结构优化**
  - 将日志文件处理逻辑分离为LogFile独立类
  - 重构Utils工具类，新增目录统计/递归创建/安全删除等方法
  - 使用原子操作优化多线程任务计数逻辑
  - 清理重复代码，统一OpenGL/Vulkan/RHI视图的缩略图交互

- **构建与部署**
  - 调整Windows构建环境为最新版(vs2022)
  - 升级macOS最低部署目标到12.0
  - 优化shader编译脚本适配新Qt路径
  - 修复跨平台文件路径处理问题

- **问题修复**
  - 解决日志异步写入可能丢失最后内容的问题
  - 修正控制台日志截断机制，新增maxConsoleLineSize配置
  - 修复目录遍历统计时的潜在越界问题

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -18,7 +18,7 @@ inputs:
   qt_ver:
     description: 'qt version'
     required: false
-    default: '6.7.2'
+    default: '6.8.2'
     type: string
 
 runs:
@@ -37,7 +37,7 @@ runs:
         rm vcpkg.json
 
     - name: Cache windows vcpkg
-      if: startsWith(runner.os, 'Windows')
+      if: runner.os == 'Windows'
       uses: actions/cache@v4
       with: 
         path: C:\vcpkg\installed
@@ -46,10 +46,9 @@ runs:
           ${{ inputs.os_name }}-vcpkg-installed-${{ runner.os_name }}-
           ${{ inputs.os_name }}-vcpkg-installed-
           ${{ inputs.os_name }}-
-        save-always: true
 
     - name: Cache macos or linux vcpkg
-      if: startsWith(runner.os, 'macOS') || startsWith(runner.os, 'Linux')
+      if: runner.os == 'macOS' || runner.os == 'Linux'
       uses: actions/cache@v4
       with: 
         path: /usr/local/share/vcpkg/installed
@@ -58,10 +57,9 @@ runs:
           ${{ inputs.os_name }}-vcpkg-installed-${{ runner.os_name }}-
           ${{ inputs.os_name }}-vcpkg-installed-
           ${{ inputs.os_name }}-
-        save-always: true
 
     - name: Install dependencies on windows
-      if: startsWith(runner.os, 'Windows')
+      if: runner.os == 'Windows'
       shell: bash
       run: |
         choco install ninja
@@ -70,7 +68,7 @@ runs:
         vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-windows || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install dependencies on macos
-      if: startsWith(runner.os, 'macOS')
+      if: runner.os == 'macOS'
       shell: bash
       run: |
         brew install ninja python-setuptools
@@ -81,7 +79,7 @@ runs:
         vcpkg install ${{ inputs.vcpkg_libs }} --triplet arm64-osx || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install dependencies on linux
-      if: startsWith(runner.os, 'Linux')
+      if: runner.os == 'Linux'
       shell: bash
       run: |
         sudo apt-get update
