--- a/examples/rhiviewer/CMakeLists.txt
+++ b/examples/rhiviewer/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(PROJECT_SOURCES
-    ../common/viewer.cc
-    ../common/viewer.hpp
     ../common/imagelistmodel.cpp
     ../common/imagelistmodel.h
+    ../common/thumbnail.cc
+    ../common/thumbnail.hpp
+    ../common/viewer.cc
+    ../common/viewer.hpp
     main.cc
     mainwindow.cc
     mainwindow.hpp
@@ -16,9 +18,9 @@ target_link_libraries(
           thirdparty
           dump
           utils
-          Qt6::GuiPrivate
-          Qt6::Gui
-          Qt6::Widgets
-          Qt6::Network
-          Qt6::Concurrent)
+          Qt::GuiPrivate
+          Qt::Gui
+          Qt::Widgets
+          Qt::Network
+          Qt::Concurrent)
 qt_finalize_executable(Qt-RhiViewer)
