--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -3,6 +3,8 @@ set(PROJECT_SOURCES
     hostosinfo.h
     logasync.cpp
     logasync.h
+    logfile.cc
+    logfile.hpp
     osspecificaspects.h
     singleton.hpp
     utils_global.h
@@ -13,7 +15,7 @@ set(PROJECT_SOURCES
     validator.hpp)
 
 add_custom_library(utils ${PROJECT_SOURCES})
-target_link_libraries(utils PRIVATE Qt6::Widgets Qt6::Core5Compat)
+target_link_libraries(utils PRIVATE Qt::Widgets Qt::Core5Compat)
 
 if(CMAKE_HOST_WIN32)
   target_compile_definitions(utils PRIVATE "UTILS_LIBRARY")
