--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -28,7 +28,7 @@ set(PROJECT_SOURCES
     imageview.h)
 
 add_custom_library(graphics ${PROJECT_SOURCES})
-target_link_libraries(graphics PRIVATE Qt6::Widgets)
+target_link_libraries(graphics PRIVATE Qt::Widgets)
 
 if(CMAKE_HOST_WIN32)
   target_compile_definitions(graphics PRIVATE "GRAPHICS_LIBRARY")
