[优化]: 新增缩略图缓存机制并重构图片加载逻辑
- **核心功能增强**
  - 新增`ThumbnailCache`类实现二级缓存机制（内存+磁盘）
  - 内存缓存使用`QCache`自动管理，最大成本设置为100MB
  - 磁盘缓存持久化存储到`<cache>/thumbnails`目录，自动清理旧文件
  - 支持异步缓存清理线程通过`QThreadPool`执行

- **架构重构**
  - 将`Viewer`类的`setImage`改为`setThumbnail`接口，统一使用`Thumbnail`对象传递数据
  - `ImageLoadRunnable`加载线程优先从缓存读取缩略图，未命中时生成并缓存

- **构建系统更新**
  - 在`CMakeLists.txt`和`.pro`文件中添加`thumbnailcache`编译依赖
  - 调整示例项目（graphics/opengl/vulkan/rhiviewer）适配新缓存架构

 - **版权信息更新**
  - 将应用程序版权年份从2024更新至2025

--- a/examples/rhiviewer/CMakeLists.txt
+++ b/examples/rhiviewer/CMakeLists.txt
@@ -3,6 +3,8 @@ set(PROJECT_SOURCES
     ../common/imagelistmodel.h
     ../common/thumbnail.cc
     ../common/thumbnail.hpp
+    ../common/thumbnailcache.cc
+    ../common/thumbnailcache.hpp
     ../common/viewer.cc
     ../common/viewer.hpp
     main.cc
