[新增图片缓存机制及支持更多格式]: 优化图片加载性能并扩展格式兼容性
- **支持更多图片格式**：通过引入`kimageformats-binaries`第三方库，增加对WebP/AVIF/HEIF等格式的支持，需将库文件放置于指定目录
- **实现图片缓存系统**：
  - 新增`Utils::ImageCache`单例类，采用`QCache`实现内存缓存，自动维护缓存大小
  - 缓存键使用文件路径+修改时间+大小生成MD5哈希，确保文件变更后自动失效
  - 支持后台线程异步加载图片，避免主线程阻塞
- **优化现有图片加载逻辑**：
  - 在OpenGL/Vulkan/RHI渲染模块及图片查看器中统一接入缓存机制
  - 替换直接`QImage`构造函数为缓存查询，减少IO操作
  - 增加加载失败时的用户提示功能
- **改进工程配置**：
  - 为gpugraphics/graphics/utils模块添加QtConcurrent依赖
  - 调整CMake和qmake构建文件确保正确链接缓存模块
- **修复缩略图缓存机制**：
  - 修正缩略图缓存键生成方式，避免不同尺寸图片覆盖缓存
  - 增加自动清理过期缓存功能
- **增强代码健壮性**：
  - 在关键位置添加`Q_ASSERT`确保主线程操作
  - 统一处理空图片路径的特殊情况
  - 优化Model层空数据返回逻辑

--- a/src/gpugraphics/CMakeLists.txt
+++ b/src/gpugraphics/CMakeLists.txt
@@ -18,8 +18,8 @@ endif()
 qt_add_resources(SOURCES shader.qrc)
 
 add_custom_library(gpugraphics ${PROJECT_SOURCES} ${SOURCES})
-target_link_libraries(gpugraphics PRIVATE Qt::GuiPrivate Qt::Gui Qt::Widgets
-                                          Qt::OpenGLWidgets)
+target_link_libraries(gpugraphics PRIVATE utils Qt::Concurrent Qt::GuiPrivate
+                                          Qt::Gui Qt::Widgets Qt::OpenGLWidgets)
 
 if(CMAKE_HOST_WIN32)
   target_compile_definitions(gpugraphics PRIVATE "GPUGRAPHICS_LIBRARY")
