[重构CI/CD流程并升级依赖版本]: 优化GitHub Actions配置，更新Qt和vcpkg版本，移除冗余参数
- **Qt版本升级**: 将项目中使用的Qt版本从6.8.2更新至6.9.0，以利用新版本的特性和改进，提升项目整体性能与兼容性。
- **优化缓存机制**: 调整GitHub Actions中的缓存策略，移除对`os_name`的依赖，直接使用`runner.os`，简化配置并提高跨平台构建的稳定性。
- **移除Vulkan相关代码**: 暂时注释掉Windows平台下的Vulkan相关源文件和头文件的包含，以及对应的宏定义，可能是为了解决构建问题或调整项目功能侧重。
- **C++标准更新**: 将C++标准从C++17提升至C++20，并对不同编译器的最低版本要求进行了明确，确保项目能够充分利用现代C++特性。
- **日志模块优化**: 在日志异步处理模块中，将同步机制从Qt的`QWaitCondition`和`QMutex`替换为C++20的`std::binary_semaphore`，简化代码并可能提升性能。
- **修复代码拼写错误**: 修正了代码中`StdAndFile`和`StandardAndFile`等拼写不一致的问题，统一为`StandardAndFile`，提升代码可读性。
- **调整日志文件命名规则**: 将日志文件命名中的日期格式从`yyyy-MM-dd-hh-mm-ss`改为`yyyyMMdd_hhmmss`，使日志文件名更加紧凑，便于管理和识别。
- **更新vcpkg依赖基线**: 修改`vcpkg.json`文件中的`builtin-baseline`值，更新项目依赖的vcpkg版本，以获取最新的库更新和安全补丁。
- **移除过时依赖安装**: 去掉了对Vulkan SDK的安装步骤，减少构建过程中的冗余操作，加快构建速度。
- **改进Qt模块加载路径**: 根据不同操作系统调整Qt模块的搜索路径，确保项目在不同平台下能够正确找到所需的Qt组件。

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -1,10 +1,6 @@
 name: 'Install Dependencies'
 description: 'Install vcpkg libraries and qt environment'
 inputs:
-  os_name:
-    description: 'os name'
-    required: true
-    type: string
   vcpkg_libs:
     description: 'vcpkg libraries'
     required: false
@@ -18,7 +14,7 @@ inputs:
   qt_ver:
     description: 'qt version'
     required: false
-    default: '6.8.2'
+    default: '6.9.0'
     type: string
 
 runs:
@@ -27,9 +23,6 @@ runs:
   steps:
     - name: Install Custom VCPKG
       uses: RealChuan/install-vcpkg@main
-      with:
-        repo: 'https://github.com/RealChuan/vcpkg.git'
-        branch: 'dev'
         
     - name: Delete vcpkg.json
       shell: bash
@@ -41,22 +34,20 @@ runs:
       uses: actions/cache@v4
       with: 
         path: C:\vcpkg\installed
-        key: ${{ inputs.os_name }}-vcpkg-installed-${{ runner.os }}-${{ github.sha }}
+        key: ${{ runner.os }}-vcpkg-installed-${{ github.sha }}
         restore-keys: |
-          ${{ inputs.os_name }}-vcpkg-installed-${{ runner.os_name }}-
-          ${{ inputs.os_name }}-vcpkg-installed-
-          ${{ inputs.os_name }}-
+          ${{ runner.os }}-vcpkg-installed-
+          ${{ runner.os }}-
 
     - name: Cache macos or linux vcpkg
       if: runner.os == 'macOS' || runner.os == 'Linux'
       uses: actions/cache@v4
       with: 
         path: /usr/local/share/vcpkg/installed
-        key: ${{ inputs.os_name }}-vcpkg-installed-${{ runner.os }}-${{ github.sha }}
+        key: ${{ runner.os }}-vcpkg-installed-${{ github.sha }}
         restore-keys: |
-          ${{ inputs.os_name }}-vcpkg-installed-${{ runner.os_name }}-
-          ${{ inputs.os_name }}-vcpkg-installed-
-          ${{ inputs.os_name }}-
+           ${{ runner.os }}-vcpkg-installed-
+           ${{ runner.os }}-
 
     - name: Install dependencies on windows
       if: runner.os == 'Windows'
@@ -71,11 +62,10 @@ runs:
       if: runner.os == 'macOS'
       shell: bash
       run: |
-        brew install ninja python-setuptools
+        brew install python-setuptools
         ninja --version
         cmake --version
         clang --version
-        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-osx || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
         vcpkg install ${{ inputs.vcpkg_libs }} --triplet arm64-osx || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install dependencies on linux
@@ -94,10 +84,4 @@ runs:
       with:
         version: ${{ inputs.qt_ver }}
         modules: ${{ inputs.qt_modules }}
-        cache: 'true'
-
-    - name: Install Vulkan SDK
-      uses: humbletim/install-vulkan-sdk@main
-      with:
-        version: 1.3.290.0
-        cache: true        
+        cache: 'true'  
