[集成OpenCV并添加图像处理功能]: 本次提交主要涉及OpenCV库的集成和相关图像处理功能的实现
- **依赖库更新**: 在vcpkg.json中新增OpenCV依赖，包含线程、OpenMP和TBB特性支持，并更新了GitHub Actions工作流文件以安装额外的系统依赖库，如libltdl-dev、libxi-dev等，确保OpenCV的顺利编译与运行。
- **新增qopencv模块**: 创建qopencv目录及子模块enhancement，实现基础图像增强功能。包括高斯模糊（GaussianBlur）和直方图均衡化（HistogramEqualization），提供参数调整界面与图像处理算法实现。
- **工具函数开发**: 在utils模块中新增异步执行函数`asynchronous`，简化耗时操作的异步处理流程，提升UI响应速度。
- **OpenCV工具示例**: 新增examples/opencvtools示例项目，包含主窗口（MainWindow）和OpenCVWidget组件。通过图形化界面选择不同算法类型和具体算法，实时预览处理效果，验证功能正确性。
- **CMake与qmake配置调整**: 更新src/qopencv/CMakeLists.txt和examples/opencvtools/opencvtools.pro等构建文件，正确链接OpenCV库并包含必要的头文件路径，确保多平台编译通过。
- **代码结构调整**: 优化部分现有代码结构，如将Graphics::ImageView指针明确作用域，提升代码可读性与维护性。

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -4,7 +4,7 @@ inputs:
   vcpkg_libs:
     description: 'vcpkg libraries'
     required: false
-    default: 'breakpad crashpad giflib'
+    default: 'breakpad crashpad giflib opencv[thread]'
     type: string
   qt_modules:
     description: 'qt modules'
@@ -73,7 +73,8 @@ runs:
       shell: bash
       run: |
         sudo apt-get update
-        sudo apt-get install ninja-build build-essential libgl1-mesa-dev clang
+        sudo apt-get install ninja-build build-essential libgl1-mesa-dev clang \
+          libltdl-dev libxi-dev libxtst-dev libx11-dev libxft-dev libxext-dev libxrandr-dev
         ninja --version
         cmake --version
         gcc --version
