--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,10 @@ find_package(GIF REQUIRED)
 if(GIF_FOUND)
   message(STATUS "found GIF")
 endif()
+find_package(OpenCV CONFIG REQUIRED)
+if(OpenCV_FOUND)
+  message(STATUS "found OpenCV")
+endif()
 
 message(STATUS "BUILD_VULKAN: ${BUILD_VULKAN}")
 if(BUILD_VULKAN)
