--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(dump)
 add_subdirectory(3rdparty)
 add_subdirectory(gpugraphics)
 add_subdirectory(graphics)
+add_subdirectory(qopencv)
