--- a/src/dump/CMakeLists.txt
+++ b/src/dump/CMakeLists.txt
@@ -2,8 +2,9 @@ set(PROJECT_SOURCES breakpad.hpp breakpad.cc crashpad.hpp crashpad.cc
                     dump_global.hpp)
 add_custom_library(dump ${PROJECT_SOURCES})
 target_link_libraries(
-  dump PRIVATE utils Qt::Widgets unofficial::breakpad::libbreakpad
-               unofficial::breakpad::libbreakpad_client crashpad::crashpad)
+  dump
+  PRIVATE utils Qt::Concurrent Qt::Widgets unofficial::breakpad::libbreakpad
+          unofficial::breakpad::libbreakpad_client crashpad::crashpad)
 
 if(CMAKE_HOST_WIN32)
   target_compile_definitions(dump PRIVATE "DUMP_LIBRARY")
