[新增功能与优化]: 添加双边滤波与中值滤波算法，优化图像处理交互体验
- **新增图像处理算法**: 实现BilateralFilter与MedianBlur类，支持双边滤波和中值滤波功能
- **增强错误处理**: 在应用算法前增加未选择算法/未加载图片的警告提示框
- **界面交互优化**:
  - 添加"Original Image"按钮支持快速查看原图
  - 调整Apply按钮尺寸策略，统一工具按钮样式
- **代码结构优化**:
  - 拆分OpenCVObject为独立类，增强模块化
  - 更新CMakeLists和.pro构建配置，适配新增类文件
  - 修复GaussianBlur滑动条初始化值问题
- **异常处理增强**: 在OpenCV算法调用处增加try-catch块，捕获并输出异常信息

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -1,10 +1,16 @@
 set(PROJECT_SOURCES
+    enhancement/bilateralfilter.cc
+    enhancement/bilateralfilter.hpp
     enhancement/enhancement.cc
     enhancement/enhancement.hpp
     enhancement/gaussianblur.cc
     enhancement/gaussianblur.hpp
     enhancement/histogramequalization.cc
     enhancement/histogramequalization.hpp
+    enhancement/medianblur.cc
+    enhancement/medianblur.hpp
+    opencvobject.cc
+    opencvobject.hpp
     opencvutils.cc
     opencvutils.hpp
     qopencv_global.hpp
