[新增图像增强功能]：线性对比度、伽马校正和对数变换
- **新增功能模块**：添加线性对比度调整(LinearContrast)、伽马校正(GammaCorrection)和对数变换(LogTransformation)三类图像增强算法
- **UI交互增强**：
  - LinearContrast支持alpha系数(1.0-3.0)和beta偏移量(0-100)参数调节
  - GammaCorrection提供伽马值(0.1-3.0)调节控件
  - LogTransformation采用固定参数的无界面实现
- **工程配置优化**：
  - 更新CMakeLists.txt和enhancement.pri文件，集成新增的源码文件
  - 扩展Enhancement::Type枚举类型，支持新增算法类型标识
  - 完善qopencv.cc的对象工厂逻辑，支持新算法实例化
- **问题修复**：修正MedianBlur控件初始值显示同步问题

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -3,10 +3,16 @@ set(PROJECT_SOURCES
     enhancement/bilateralfilter.hpp
     enhancement/enhancement.cc
     enhancement/enhancement.hpp
+    enhancement/gammacorrection.cc
+    enhancement/gammacorrection.hpp
     enhancement/gaussianblur.cc
     enhancement/gaussianblur.hpp
     enhancement/histogramequalization.cc
     enhancement/histogramequalization.hpp
+    enhancement/linearcontrast.cc
+    enhancement/linearcontrast.hpp
+    enhancement/logtransformation.cc
+    enhancement/logtransformation.hpp
     enhancement/medianblur.cc
     enhancement/medianblur.hpp
     opencvobject.cc
