[新增图像增强算法及优化依赖配置]: 添加图像锐化与去雾功能，调整OpenCV依赖以支持新特性
- **GitHub Actions依赖更新**：在安装依赖的GitHub Actions中，将OpenCV的默认特性从`opencv[thread]`更新为`opencv[contrib,thread]`，以支持更多扩展功能。
- **OpenCVWidget UI调整**：重构了`OpenCVWidget`的工具栏布局，将类型和算法选择组合件调整为网格布局，提升了界面的可读性和用户体验；在打开图像和更改图像时，新增了`d_ptr->image = {}`语句，用于初始化或重置图像数据。
- **第三方依赖更新**：在`3rdparty.pri`配置文件中，将OpenCV的链接库从`-lopencv_imgproc4$$suffix -lopencv_core4$$suffix`更新为`-lopencv_ximgproc4$$suffix -lopencv_imgproc4$$suffix -lopencv_core4$$suffix`，以支持新的图像处理模块。
- **新增去雾功能**：实现了基于暗通道先验的图像去雾算法，包括计算暗通道、估计大气光照、计算透射率和图像恢复等步骤；提供了图形化参数调整界面，允许用户通过滑块动态调整去雾效果。
- **新增锐化功能**：实现了多种锐化算法，包括Roberts、Prewitt、Sobel和Laplacian算子；提供了组合框供用户选择不同的锐化算法，并在图像处理过程中应用相应的卷积核。
- **代码结构优化**：在`enhancement.hpp`中扩展了`Type`枚举，新增了`Sharpen`和`Dehazed`类型；更新了`enhancement.pri`文件，添加了新实现的源文件和头文件路径。
- **异常处理增强**：在`histogramequalization.cc`中，为直方图均衡化操作添加了异常捕获机制，提升了代码的健壮性和错误报告能力。
- **vcpkg配置更新**：在`vcpkg.json`中，为OpenCV启用了`contrib`特性，确保项目能够使用OpenCV的扩展模块。

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(PROJECT_SOURCES
     enhancement/bilateralfilter.cc
     enhancement/bilateralfilter.hpp
+    enhancement/dehazed.cc
+    enhancement/dehazed.hpp
     enhancement/enhancement.cc
     enhancement/enhancement.hpp
     enhancement/gammacorrection.cc
@@ -15,6 +17,8 @@ set(PROJECT_SOURCES
     enhancement/logtransformation.hpp
     enhancement/medianblur.cc
     enhancement/medianblur.hpp
+    enhancement/sharpen.cc
+    enhancement/sharpen.hpp
     opencvobject.cc
     opencvobject.hpp
     opencvutils.cc
