[新增OpenCV超分辨率功能及工具链支持]: 集成基于深度学习的超分辨率算法，增强图像处理能力
- **添加SuperResolution增强类型**: 实现基于OpenCV dnn_superres模块的超分辨率处理，支持ESPCN等模型
- **扩展3rdparty库依赖**: 新增opencv_dnn_superres4和opencv_dnn4链接库，确保算法模型加载能力
- **增强Utils工具集**: 新增getTopParentWidget方法用于正确获取父级窗口，改进文件选择对话框交互
- **完善OpenCV组件构建配置**: 在CMakeLists和pro文件中添加superresolution模块编译支持
- **增加模型选择交互界面**: 通过QLineEdit和QToolButton实现pb模型文件选择功能，支持2x/3x/4x缩放模型
- **优化OpenCV初始化流程**: 在opencvwidget中输出OpenCV构建信息，便于调试环境兼容性问题
- **扩展图像增强类型枚举**: 在enhancement.hpp新增SuperResolution类型，完善算法工厂创建逻辑

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -19,6 +19,8 @@ set(PROJECT_SOURCES
     enhancement/medianblur.hpp
     enhancement/sharpen.cc
     enhancement/sharpen.hpp
+    enhancement/superresolution.cc
+    enhancement/superresolution.hpp
     opencvobject.cc
     opencvobject.hpp
     opencvutils.cc
