[修复跨平台构建问题并优化功能开关]: 调整SuperResolution功能的条件编译逻辑，解决非Windows平台因abseil库链接问题导致的构建失败
- 添加LINK_DNN_SUPERRES编译定义: 通过条件编译控制SuperResolution功能的启用
- 限制SuperResolution仅Windows平台可用: 将相关代码移至win32条件块，避免其他平台因abseil依赖引发链接错误
- 优化头文件包含逻辑: 在enhancement.hpp/qopencv.cc中使用#ifdef保护SuperResolution相关代码
- 添加代码注释说明: 在3rdparty.pri明确标注abseil库的兼容性问题，解释功能限制原因

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -32,6 +32,7 @@ set(PROJECT_SOURCES
 add_custom_library(qopencv ${PROJECT_SOURCES})
 target_link_libraries(qopencv PRIVATE utils Qt::Concurrent Qt::Widgets
                                       ${OpenCV_LIBS})
+target_compile_definitions(qopencv PRIVATE "LINK_DNN_SUPERRES")
 
 if(CMAKE_HOST_WIN32)
   target_compile_definitions(qopencv PRIVATE "QOPENCV_LIBRARY")
