[重构]: 将滤波算法从增强模块分离，新增独立Filter类型支持
- **模块重构**: 将双边滤波、高斯模糊、中值模糊等算法从enhancement模块移至新建的filter模块
- **类型扩展**: 在OpenCVObject中新增Filter算法类型，完善类型选择与参数控件创建逻辑
- **继承结构调整**:
  - Enhancement类移除滤波相关枚举，改为继承OpenCVObject基类
  - 新增Filter类继承OpenCVObject基类，包含BilateralFilter/GaussianBlur/MedianBlur等子类
- **构建系统更新**: 调整CMakeLists.txt和qmake项目文件，重构源文件目录结构
- **工厂方法扩展**: 在qopencv.cc中新增Filter类型对象创建支持，完善类型转换逻辑
- **控件联动优化**: 在opencvwidget.cc中增加Filter类型的算法选择处理，提升UI交互完整性

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -1,26 +1,28 @@
 set(PROJECT_SOURCES
-    enhancement/bilateralfilter.cc
-    enhancement/bilateralfilter.hpp
     enhancement/dehazed.cc
     enhancement/dehazed.hpp
     enhancement/enhancement.cc
     enhancement/enhancement.hpp
     enhancement/gammacorrection.cc
     enhancement/gammacorrection.hpp
-    enhancement/gaussianblur.cc
-    enhancement/gaussianblur.hpp
     enhancement/histogramequalization.cc
     enhancement/histogramequalization.hpp
     enhancement/linearcontrast.cc
     enhancement/linearcontrast.hpp
     enhancement/logtransformation.cc
     enhancement/logtransformation.hpp
-    enhancement/medianblur.cc
-    enhancement/medianblur.hpp
     enhancement/sharpen.cc
     enhancement/sharpen.hpp
     enhancement/superresolution.cc
     enhancement/superresolution.hpp
+    filter/bilateralfilter.cc
+    filter/bilateralfilter.hpp
+    filter/filter.cc
+    filter/filter.hpp
+    filter/gaussianblur.cc
+    filter/gaussianblur.hpp
+    filter/medianblur.cc
+    filter/medianblur.hpp
     opencvobject.cc
     opencvobject.hpp
     opencvutils.cc
