[新增边缘检测功能及扩展滤波算法]: 为项目增加多种边缘检测算法和滤波器实现，完善图像处理功能模块
- **边缘检测模块**: 新增Canny、Laplacian、Scharr、Sobel四种边缘检测算法实现类
- **滤波器扩展**: 添加Blur（均值模糊）和BoxFilter（盒式滤波）两种滤波器类型
- **UI支持**: 在示例工具中增加边缘检测算法类型选择及参数控制界面
- **类型枚举扩展**: 在OpenCVObject中新增EdgeDetection算法类型分类
- **编译配置**: 更新CMakeLists.txt和项目文件，整合边缘检测模块到构建系统
- **工厂函数扩展**: 在qopencv.cc中增加边缘检测算法对象的创建支持
- **代码优化**: 统一滤波器的边界类型选项显示文本，移除冗余本地化描述

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -17,12 +17,25 @@ set(PROJECT_SOURCES
     enhancement/superresolution.hpp
     filter/bilateralfilter.cc
     filter/bilateralfilter.hpp
+    filter/blur.cc
+    filter/blur.hpp
+    filter/boxfilter.cc
+    filter/boxfilter.hpp
     filter/filter.cc
     filter/filter.hpp
     filter/gaussianblur.cc
     filter/gaussianblur.hpp
     filter/medianblur.cc
     filter/medianblur.hpp
+    edgedetection/canny.cc edgedetection/canny.hpp
+    edgedetection/edgedetection.cc
+    edgedetection/edgedetection.hpp
+    edgedetection/laplacian.cc
+    edgedetection/laplacian.hpp
+    edgedetection/scharr.cc
+    edgedetection/scharr.hpp
+    edgedetection/sobel.cc
+    edgedetection/sobel.hpp
     opencvobject.cc
     opencvobject.hpp
     opencvutils.cc
