[新增功能]: 新增图像分割算法支持及优化参数控件
- **新增分割算法模块**: 添加阈值化(Threshold)和自适应阈值化(AdaptiveThreshold)算法的实现，支持图像分割处理。
- **优化参数控件交互**: 将边缘检测(如Sobel、Laplacian)和滤波算法(如Blur、GaussianBlur)的滑块参数改为组合框，确保内核尺寸为奇数，提升参数有效性。
- **修复边界类型选项**: 移除不支持的WRAP边界类型选项，统一使用OpenCV标准边界常量。
- **增强代码可维护性**: 在CMake和项目文件中添加segmentation模块配置，完善算法类型枚举，统一异常处理逻辑。
- **改进UI标签显示**: 对滑动条数值变化添加动态标签更新，优化参数说明的可读性。

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -27,7 +27,8 @@ set(PROJECT_SOURCES
     filter/gaussianblur.hpp
     filter/medianblur.cc
     filter/medianblur.hpp
-    edgedetection/canny.cc edgedetection/canny.hpp
+    edgedetection/canny.cc
+    edgedetection/canny.hpp
     edgedetection/edgedetection.cc
     edgedetection/edgedetection.hpp
     edgedetection/laplacian.cc
@@ -36,6 +37,12 @@ set(PROJECT_SOURCES
     edgedetection/scharr.hpp
     edgedetection/sobel.cc
     edgedetection/sobel.hpp
+    segmentation/adaptivethreshold.cc
+    segmentation/adaptivethreshold.hpp
+    segmentation/segmentation.cc
+    segmentation/segmentation.hpp
+    segmentation/threshold.cc
+    segmentation/threshold.hpp
     opencvobject.cc
     opencvobject.hpp
     opencvutils.cc
