[新增分水岭图像分割算法支持]: 实现基于OpenCV的分水岭分割算法并集成到图像处理框架
- 新增分水岭算法核心实现: 添加watershed.cc/hpp实现预处理、标记生成及算法应用
- 扩展图像分割类型枚举: 在segmentation.hpp中新增Watershed类型标识
- 集成算法到处理框架: 在qopencv.cc中注册分水岭算法工厂方法
- 完善构建系统配置: 更新CMakeLists.txt和segmentation.pri添加新算法编译依赖
- 增加可视化支持: 对分割结果进行归一化处理并应用JET色彩映射

--- a/src/qopencv/CMakeLists.txt
+++ b/src/qopencv/CMakeLists.txt
@@ -43,6 +43,8 @@ set(PROJECT_SOURCES
     segmentation/segmentation.hpp
     segmentation/threshold.cc
     segmentation/threshold.hpp
+    segmentation/watershed.cc
+    segmentation/watershed.hpp
     opencvobject.cc
     opencvobject.hpp
     opencvutils.cc
