[重构与功能增强]: 移除qtlockedfile改用QLockFile，引入UI看门狗检测主线程阻塞，优化多线程和资源管理
- 移除qtlockedfile相关代码: 改用QLockFile实现文件锁定，提高跨平台兼容性和代码简洁性
- 引入UI看门狗功能: 新增UiWatchdog类检测主线程阻塞，通过环境变量QTC_UI_WATCHDOG和QTC_FREEZE_DETECTOR控制
- 优化多线程资源管理: 在RecordGifThread中使用原子操作替代volatile，改进线程停止逻辑
- 调整lambda捕获方式: 将[=]改为[this]或明确捕获列表，避免潜在的内存访问问题
- 改进头文件包含: 将部分头文件保护宏改为#pragma once，简化代码结构
- 增强错误处理: 在QtSingleApplication中增加应用冻结检测和报告功能
- 优化图像处理逻辑: 在Viewer和ListItemView中改进图像加载和缩略图处理流程
- 调整构建配置: 移除qtlockedfile子项目，更新CMakeLists.txt文件结构
- 改进用户交互: 在RecordWidget中完成录制后自动打开保存目录

--- a/src/3rdparty/CMakeLists.txt
+++ b/src/3rdparty/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_subdirectory(gif)
-add_subdirectory(qtlockedfile)
 
 set(PROJECT_SOURCES
     qtsingleapplication/qtsingleapplication.cpp
@@ -9,8 +8,7 @@ set(PROJECT_SOURCES
     thirdparty_global.hpp)
 
 add_custom_library(thirdparty ${PROJECT_SOURCES})
-target_link_libraries(thirdparty PRIVATE shared_qtlockedfile utils Qt::Network
-                                         Qt::Widgets)
+target_link_libraries(thirdparty PRIVATE Qt::Network Qt::Widgets)
 
 if(CMAKE_HOST_WIN32)
   target_compile_definitions(thirdparty PRIVATE "THRIDPARTY_LIBRARY")
