--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,6 +8,8 @@ on:
         - '.gitignore'
         - 'LICENSE'
         - 'README*'
+    branches-ignore:
+        - 'dependabot/**'
   pull_request:
     paths-ignore:
         - 'docs/**'
@@ -15,6 +17,8 @@ on:
         - '.gitignore'
         - 'LICENSE'
         - 'README*'
+    branches-ignore:
+        - 'dependabot/**'
         
   schedule:
     - cron: '0 0 1 * *'
@@ -28,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:      
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 1
 
