[新增功能与改进]：添加ICO转换器和多图像文件查看器，改进Windows构建脚本
- **依赖管理**：在vcpkg默认库列表中增加freeimage，CMakeLists.txt添加freeimage依赖查找
- **功能新增**：添加ICO转换器部件(icoconverterwidget)和多图像文件查看器(multiimagefileviewer)
- **脚本优化**：用功能更完善的Enter-VsDevShell.ps1替换原有setVsDev.ps1，支持多版本VS和架构选择
- **工具组件**：新增尺寸选择器(sizeselectorwidget)和ICO写入器(icowriter)，支持自定义尺寸和背景色
- **图像处理**：新增qfreeimage模块，提供QImage与FreeImage格式互转及ICO文件读写功能
- **界面整合**：在主窗口中集成ICO转换器和多图像查看器功能选项
- **工具函数**：增加readImages多帧图像读取和makeSquare方形图像生成功能
- **文档更新**：补充ICO制作注意事项及新功能说明，优化效果图展示结构

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -4,7 +4,7 @@ inputs:
   vcpkg_libs:
     description: 'vcpkg libraries'
     required: false
-    default: 'breakpad crashpad giflib opencv[contrib,thread]'
+    default: 'breakpad crashpad freeimage giflib opencv[contrib,thread]'
     type: string
   qt_modules:
     description: 'qt modules'
