--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ find_package(crashpad CONFIG REQUIRED)
 if(crashpad_FOUND)
   message(STATUS "found crashpad")
 endif()
+find_package(freeimage CONFIG REQUIRED)
+if(freeimage_FOUND)
+  message(STATUS "found freeimage")
+endif()
 find_package(GIF REQUIRED)
 if(GIF_FOUND)
   message(STATUS "found GIF")
