--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(3rdparty)
 add_subdirectory(gpugraphics)
 add_subdirectory(graphics)
 add_subdirectory(qopencv)
+add_subdirectory(qfreeimage)
