--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(PROJECT_SOURCES
     hostosinfo.cpp
     hostosinfo.h
+    icowriter.cc
+    icowriter.hpp
     imagecache.cc
     imagecache.hpp
     logasync.cpp
