--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,7 +46,7 @@ jobs:
         if: startsWith(matrix.os, 'windows')
         shell: pwsh
         run: |
-          .\scripts\windows\setVsDev.ps1
+          .\packaging\windows\Enter-VsDevShell.ps1
           cmake `
             -S . `
             -B ./build `
