--- a/.github/workflows/qmake.yml
+++ b/.github/workflows/qmake.yml
@@ -49,7 +49,7 @@ jobs:
         if: startsWith(matrix.os, 'windows')
         shell: pwsh
         run: |
-          ..\scripts\windows\setVsDev.ps1
+          ..\packaging\windows\Enter-VsDevShell.ps1
           & qmake ./../.
           & jom
         working-directory: build
