[重构图形模块]: 重命名核心类并统一接口设计
- **核心类重命名**: 将 `BasicGraphicsItem` 重构为 `GraphicsBasicItem`，`ImageView` 重构为 `GraphicsView`，提升命名一致性
- **头文件保护更新**: 使用 `#pragma once` 替换传统宏保护，简化头文件结构
- **枚举类型迁移**: 将图形形状类型从 `BasicGraphicsItem::Shape` 迁移到 `GraphicsBasicItem::Shape`
- **容器类型统一**: 引入 `GraphicsItemList` 类型别名替代 `QVector<BasicGraphicsItem*>`
- **构建系统更新**: 同步修改 CMakeLists.txt 和 .pro 文件中的源文件列表和依赖关系
- **示例代码适配**: 更新所有示例代码中的类引用和头文件包含路径
- **空指针安全检查**: 在 mainwindow.cpp 中增加 Vulkan 查看器的空指针检查
- **类型别名优化**: 新增 `Areas` 和 `Images` 类型别名提升代码可读性
- **工作流显示改进**: 将 GitHub Actions 中的显示文本从 "binary directory" 改为 "output directory"
- **功能保持完整**: 保留图像查看、缩放、旋转等核心功能，更新相关信号连接

--- a/.github/workflows/qmake.yml
+++ b/.github/workflows/qmake.yml
@@ -88,14 +88,14 @@ jobs:
           qmake QMAKE_APPLE_DEVICE_ARCHS="${{ matrix.arch }}" ../.
           make -j $(sysctl -n hw.ncpu)
 
-      - name: Display binary directory tree (Windows)
+      - name: Display output directory tree (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
           cd output/
           cmd /c tree /f
 
-      - name: Display binary directory tree (Unix-like)
+      - name: Display output directory tree (Unix-like)
         if: runner.os == 'Linux' || runner.os == 'macOS'
         shell: bash
         run: |
