--- a/src/qfreeimage/CMakeLists.txt
+++ b/src/qfreeimage/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(PROJECT_SOURCES freeimageutils.cc freeimageutils.hpp qfreeimage_global.hpp)
 
 add_platform_library(qfreeimage ${PROJECT_SOURCES})
-target_link_libraries(qfreeimage PRIVATE utils Qt::Widgets)
+target_link_libraries(qfreeimage PRIVATE utils Qt::Concurrent Qt::Widgets)
 target_link_libraries(qfreeimage PRIVATE freeimage::FreeImage
                                          freeimage::FreeImagePlus)
 
