[重构图形项系统]：引入几何缓存与统一交互架构
-**核心架构优化**: 新增GeometryCache类统一管理图形项的几何数据，减少重复计算，提升绘制性能
-**基础类重构**: 重写GraphicsBasicItem事件处理逻辑，统一鼠标交互行为，改进锚点绘制和边界框显示
-**图形项验证增强**: 为所有形状添加基于边界检查的有效性验证，确保图形尺寸符合最小阈值要求
-**信号命名修正**: 将lineChnaged信号统一更正为lineChanged，保持代码一致性
-**光标反馈优化**: 重新设计Utils::cursorForDirection方法，提供更精准的方向光标提示
-**绘制接口统一**: 将各图形项绘制逻辑拆分为drawContent专用方法，简化paint函数复杂度
-**交互体验提升**: 改进鼠标拖拽控制，支持更精细的控制点调整，增强用户编辑体验
-**代码清理**: 移除不必要的头文件依赖，使用pragma once替代传统头文件保护宏
-**构建系统更新**: 在graphics.pro中添加geometrycache相关文件，确保编译正确性

--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(PROJECT_SOURCES
+    geometrycache.cc
+    geometrycache.hpp
     graphics_global.h
     graphicsbasicitem.cpp
     graphicsbasicitem.h
