[重构图形项鼠标事件处理并优化字幕分割线功能]：统一了各图形项的鼠标事件处理机制，新增专用字幕分割线组件，并优化了边缘检测算法
-**图形项鼠标事件重构**: 将原有各图形项（圆弧、圆、线、多边形、圆环、旋转矩形、圆角矩形）中的鼠标移动和悬停事件处理逻辑统一抽象到基类`GraphicsBasicItem`中，通过新增`handleMouseMoveEvent`、`detectEdgeRegion`和`updateHoverPreview`等虚函数实现差异化处理，提高代码复用性和可维护性
-**新增字幕分割线组件**: 删除原有`CustomLineItem`类，新增`SubtitleDividerLineItem`专用组件，重写鼠标移动事件处理逻辑，确保分割线仅支持垂直方向移动，优化字幕拼接界面交互体验
-**图形项边缘检测优化**: 在各图形项中实现`detectEdgeRegion`方法，改进边缘区域检测算法，使用`Utils::isPointNearEdge`方法替代原有粗略计算，提升边缘拖拽操作的精准度
-**示例代码同步更新**: 同步更新示例代码中相关组件引用，将`SectionalSubtitlesView`中的分割线组件替换为新的`SubtitleDividerLineItem`，并修复分割线位置计算逻辑
-**图形工具函数增强**: 在`graphicsutils`中新增`isPointNearEdge`和`pointAtDistance`工具函数，提供更精确的点到边缘距离计算和坐标点定位功能
-**视图初始化优化**: 提取`GraphicsView`初始化逻辑到独立方法`initializeView`中，改善代码结构清晰度
-**条件判断简化**: 在`subtitlsplicingwidget.cc`中简化信号处理函数的条件判断逻辑，提升代码可读性
-**Lambda表达式安全优化**: 在`listiitemview.cc`中修正lambda表达式捕获方式，避免潜在的空指针访问问题

--- a/examples/graphics/CMakeLists.txt
+++ b/examples/graphics/CMakeLists.txt
@@ -9,8 +9,6 @@ set(PROJECT_SOURCES
     ../common/viewer.hpp
     capturewidget.cc
     capturewidget.hpp
-    customlineitem.cc
-    customlineitem.hpp
     drawscene.cc
     drawscene.hpp
     drawwidget.cpp
@@ -46,6 +44,8 @@ set(PROJECT_SOURCES
     sizeselectorwidget.hpp
     stretchparamssettingdailog.cc
     stretchparamssettingdailog.hpp
+    subtitledividerlineitem.cc
+    subtitledividerlineitem.hpp
     subtitlsplicingwidget.cc
     subtitlsplicingwidget.hpp)
 
