[CI/CD优化与日志改进]: 优化GitHub Actions配置并增强日志文件错误处理
-**CI依赖安装**: 在Windows、macOS和Linux的vcpkg安装命令中添加`--clean-buildtrees-after-build`和`--clean-packages-after-build`参数，构建后自动清理以节省磁盘空间
-**CI构建流程**: 将条件判断从`startsWith(matrix.os,...)`改为更准确的`runner.os`环境变量检查，提高构建可靠性
-**工具链更新**: 将README工作流中的setup-node动作从v5升级到v6版本
-**日志系统增强**: 在日志文件滚动时添加打开文件失败的错误检查和警告输出，提高系统健壮性

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -61,7 +61,7 @@ jobs:
       - uses: ./.github/actions/install-dependencies
 
       - name: Configure and build windows
-        if: startsWith(matrix.os, 'windows')
+        if: runner.os == 'Windows'
         shell: pwsh
         run: |
           .\packaging\windows\Enter-VsDevShell.ps1
@@ -73,7 +73,7 @@ jobs:
           cmake --build "${{ env.BUILD_DIR }}" --config ${{ env.BUILD_TYPE }}
 
       - name: Configure and build ubuntu
-        if: startsWith(matrix.os, 'ubuntu')
+        if: runner.os == 'Linux'
         shell: bash
         run: |
           cmake \
@@ -84,7 +84,7 @@ jobs:
           cmake --build "${{ env.BUILD_DIR }}" --config ${{ env.BUILD_TYPE }}
 
       - name: Configure and build macos
-        if: startsWith(matrix.os, 'macos')
+        if: runner.os == 'macOS'
         shell: bash
         run: |
           cmake \
