--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -56,8 +56,12 @@ runs:
       run: |
         ninja --version
         cmake --version
-        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-windows || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
-        # vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-windows-static-md || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
+        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-windows \
+          --clean-buildtrees-after-build --clean-packages-after-build \
+          || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
+        # vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-windows-static-md \
+        #   --clean-buildtrees-after-build --clean-packages-after-build \
+        #   || (cat C:/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install dependencies on macos
       if: runner.os == 'macOS'
@@ -67,8 +71,12 @@ runs:
         ninja --version
         cmake --version
         clang --version
-        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-osx || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
-        vcpkg install ${{ inputs.vcpkg_libs }} --triplet arm64-osx || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
+        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-osx \
+          --clean-buildtrees-after-build --clean-packages-after-build \
+          || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
+        vcpkg install ${{ inputs.vcpkg_libs }} --triplet arm64-osx \
+          --clean-buildtrees-after-build --clean-packages-after-build \
+          || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install dependencies on linux
       if: runner.os == 'Linux'
@@ -80,7 +88,9 @@ runs:
         ninja --version
         cmake --version
         gcc --version
-        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-linux || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
+        vcpkg install ${{ inputs.vcpkg_libs }} --triplet x64-linux \
+          --clean-buildtrees-after-build --clean-packages-after-build \
+          || (cat /usr/local/share/vcpkg/installed/vcpkg/issue_body.md && exit 1)
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
