[完善CI/CD配置并修复构建系统问题]: 增强GitHub Actions的依赖管理和工作流配置，修复qmake架构检测逻辑，更新vcpkg依赖基线
- **构建工具链增强**: 在GitHub Actions的依赖安装步骤中添加autoconf、autoconf-archive、automake和libtool等构建工具，确保完整的编译环境
- **工作流配置优化**: 重构delete_workflow.yml工作流，改进输入参数描述、默认值和选项配置，提升工作流删除操作的灵活性和可用性
- **架构检测修复**: 修正qmake架构检测文件中的变量计数问题，将`$$val`改为`$$eval`，确保Apple设备架构正确识别和计数
- **依赖管理更新**: 更新vcpkg.json中的builtin-baseline到新版本，同步最新的第三方库依赖和修复，保持项目依赖的时效性

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -84,7 +84,8 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install ninja-build build-essential libgl1-mesa-dev clang \
-          libltdl-dev libxi-dev libxtst-dev libx11-dev libxft-dev libxext-dev libxrandr-dev
+          libltdl-dev libxi-dev libxtst-dev libx11-dev libxft-dev libxext-dev libxrandr-dev \
+          autoconf autoconf-archive automake libtool
         ninja --version
         cmake --version
         gcc --version
